# polyglot-code-scanner

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  DesignDecisons.md  LICENSE.txt  README.md  TODO.md  appveyor.yml  release.toml
.github/workflows/: linux-release.yml  macos-release.yml  test-all.yml  windows-release.yml
ci/: before_deploy.sh  install.sh
lati_explorer_server/: Cargo.toml
lati_explorer_server/src/: lib.rs
src/: TODO.md  code_line_data.rs  comment_filter.rs  coupling.rs  file_stats.rs  file_walker.rs  fine_grained_coupling.rs  flare.rs  git.rs  git_file_future.rs  git_file_history.rs  git_logger.rs  git_user_dictionary.rs  indentation.rs  lib.rs  loc.rs  main.rs  polyglot_data.rs  postprocessing.rs  test_helpers.rs  toxicity_indicator_calculator.rs
test_shared/: Cargo.toml
test_shared/src/: lib.rs
tests/: integration_tests.rs
tests/data/builders/: README.md
tests/data/builders/renaming/: build_rename_complex.sh  build_rename_simple.sh
tests/data/languages/: foo.unknown  non-utf8.properties  pfunit_test.pf
tests/data/simple/: parent.clj
tests/data/simple/child/: a.txt
tests/data/simple_linked/: .polyglot_code_scanner_ignore  child  parent.clj
tests/expected/: simple_files.json  simple_files_with_counts.json  simple_files_with_data.json  simple_files_with_indicators.json  simple_files_with_loc.json
tests/expected/git/: git_sample.json  git_sample_by_filename.json  git_sample_with_merges.json
tests/expected/integration_tests/: git_detailed_flare_test.json  git_flare_test.json  loc_flare_test.json
