[package]
name = "polyglot_code_scanner"
version = "0.0.3"
authors = ["Korny Sietsma <korny@sietsma.com>"]
description = "Polyglot Code Scanner - scans source code and generates tree-structured JSON files for d3 visualisation"
edition = "2018"

[dependencies]
tokei = { git = "https://github.com/kornysietsma/tokei", branch = "generic-stats-aggregation" }
ignore = "0.4"
serde = { version = "1.0.114",features = ["derive","rc"] }
erased-serde = "0.3"
serde_json = "1.0"
regex = "1"
failure = "0.1.6"
clap = "~2.33.0"
structopt = "0.2.18"
log = "0.4"
fern = "0.5"
clap-verbosity-flag = "0.2.0"
failure-tools = "4.0.3"
lazy_static = "1.4.0"
git2 = "0.8.0"
derive_builder = "0.8.0"
derive-getters = "0.1.0"
content_inspector = "0.2.4"
encoding_rs_io = "0.1.6"
grep-searcher = "0.1.6"
hdrhistogram = "7.1.0"
indicatif = "0.13.0"
chrono = "0.4"

[dev-dependencies]
test_shared = { path = "test_shared" }
tempfile = "3.1.0"
zip = "0.5.3"
pretty_assertions = "0.6.1"