[package]
name = "polyglot_code_scanner"
version = "0.3.2-alpha.0"
publish = false
authors = ["Korny Sietsma <korny@sietsma.com>"]
description = "Polyglot Code Scanner - scans source code and generates tree-structured JSON files for d3 visualisation"
edition = "2018"

[profile.release]
debug = true

[dependencies]
tokei = { git = "https://github.com/kornysietsma/tokei", branch = "accumulate-lines" }
ignore = "0.4"
serde = { version = "1.0",features = ["derive","rc"] }
erased-serde = "0.3"
serde_json = "1.0"
regex = "1.4"
failure = "0.1"
clap = "2.33"
structopt = "0.3"
log = "0.4"
fern = "0.6"
clap-verbosity-flag = "0.3"
failure-tools = "4.0"
lazy_static = "1.4"
git2 = "0.13"
derive_builder = "0.9"
derive-getters = "0.2"
content_inspector = "0.2"
encoding_rs_io = "0.1"
grep-searcher = "0.1"
hdrhistogram = "7.2"
indicatif = "0.15"
chrono = "0.4"
openssl = { version = "0.10", optional = true }
path-slash = "0.1"

[dev-dependencies]
test_shared = { path = "test_shared" }
tempfile = "3.2"
zip = "0.5"
pretty_assertions = "0.6"

[features]
vendored-openssl = ['openssl/vendored']
