[package]
name = "polyglot_code_scanner"
version = "0.3.10"
publish = false
authors = ["Korny Sietsma <korny@sietsma.com>"]
description = "Polyglot Code Scanner - scans source code and generates tree-structured JSON files for d3 visualisation"
edition = "2021"

[profile.release]
debug = true

[dependencies]
tokei = { git = "https://github.com/kornysietsma/tokei", branch = "accumulate-lines" }
ignore = "0.4.18"
serde = { version = "1.0.144",features = ["derive","rc"] }
erased-serde = "0.3.23"
serde_json = "1.0.85"
regex = "1.6.0"
clap = { version = "3.2.22", features = ["derive"] }
log = "0.4.17"
fern = "0.6.1"
clap-verbosity-flag = "1.0.1"
lazy_static = "1.4.0"
git2 = "0.15.0"
derive_builder = "0.11.2"
derive-getters = "0.2.0"
content_inspector = "0.2.4"
encoding_rs_io = "0.1.7"
grep-searcher = "0.1.10"
hdrhistogram = "7.5.2"
indicatif = "0.17.1"
chrono = "0.4.22"
openssl = { version = "0.10.42", features=["vendored"] }
path-slash = "0.2.1"
uuid = { version = "1.1.2", features = ["v4"] }
anyhow = "1.0.65"
filetime = "0.2.17"

[dev-dependencies]
test_shared = { path = "test_shared" }
tempfile = "3.3.0"
zip = "0.6.2"
pretty_assertions = "1.3.0"
