[package]
name = "test_shared"
version = "0.0.1"
authors = ["Korny Sietsma <korny@sietsma.com>"]
description = "Shared test helpers for polyglot_code_scanner"
edition = "2018"

[dependencies]
serde = { version = "1.0.101",features = ["derive"] }
serde_json = "1.0"
regex = "1"
failure = "0.1.6"
failure-tools = "4.0.3"
tempfile = "3.1.0"
zip = "0.5.3"
pretty_assertions = "0.6.1"
log = "0.4"
fern = "0.5"