[package]
name = "test_shared"
version = "0.0.1"
authors = ["Korny Sietsma <korny@sietsma.com>"]
description = "Shared test helpers for polyglot_code_scanner"
edition = "2021"

[dependencies]
serde = { version = "1.0.144",features = ["derive"] }
serde_json = "1.0.85"
regex = "1.6.0"
anyhow = "1.0.65"
tempfile = "3.3.0"
zip = "0.6.2"
pretty_assertions = "1.3.0"
log = "0.4.17"
fern = "0.6.1"